# generust

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  bootstrap  build.rs  cargo-generate.toml
crates/assets/: Cargo.toml  README.md
crates/assets/src/: lib.rs
crates/assets/stylesheets/: colors.scss  components.scss  overrides.scss  style.scss
crates/client/: Cargo.toml  README.md  client.js
crates/client/src/: ctx.rs  event_handler.rs  html.rs  js.rs  lib.rs  logging.rs  message_handler.rs
crates/client/src/socket/: ws.rs  ws_events.rs  ws_handlers.rs
crates/client/src/templates/: card.rs
crates/client/www/: index.js  package.json  webpack.config.js
crates/controllers/: Cargo.toml  Cargo.toml.rej  README.md
crates/controllers/src/: admin.rs  home.rs  lib.rs  routes.rs  static_file.rs  testbed.rs  websocket.rs  websocket_msg.rs
crates/controllers/src/forms/: profile_form.rs
crates/controllers/src/util/: actions.rs  ctx.rs  router.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: build_info.rs  lib.rs  profile.rs  tests.rs  util.rs
crates/core/src/messages/: req.rs  rsp.rs
crates/service/: Cargo.toml  README.md
crates/service/src/: cache.rs  cfg.rs  conn.rs  ctx.rs  files.rs  handler.rs  lib.rs  profile.rs
crates/templates/: Cargo.toml  README.md
crates/templates/src/: admin.rs  connections.rs  error.rs  gallery.rs  home.rs  lib.rs  profile.rs  settings.rs  testbed.rs  utils.rs
crates/templates/src/components/: backtrace.rs  card.rs  colors.rs  flash.rs  header.rs  navbar.rs  page.rs  script.rs  simple.rs
doc/: features.md  installing.md  scripts.md
project/android/: .gitignore  bootstrap.txt  readme.md
project/android/app/: build.gradle
project/android/app/src/main/: AndroidManifest.xml
project/android/app/src/main/java/com/kyleu/: App.java  AppClient.java  MainActivity.java
project/android/app/src/main/java/com/kyleu/dbui/: Dbui.java
project/android/app/src/main/res/layout/: activity_main.xml
project/android/app/src/main/res/values/: strings.xml  styles.xml
project/homebrew/: app.rb  readme.md  update.sh
project/ios/: bootstrap.txt  ios-Bridging-Header.h  ios.h  readme.md
project/ios/ios/: Info.plist  SceneDelegate.swift  ViewController.swift
project/ios/ios.xcodeproj/: project.pbxproj
project/rpm/: app.spec  readme.md
project/windows/: app.exe.manifest  app.rc
src/: app.rs  args.rs  cfg.rs  lib.rs  log.rs  main.rs  server.rs  tests.rs
