[package]
name = "{{project-name}}-assets"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "Embedded web assets for {{project-name}}"
readme = "README.md"
categories = ["wasm", "web-programming", "web-programming::websocket"]
keywords = ["static", "assets"]
homepage = "https://{{project-name}}.com"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"

[dependencies]
rust-embed = { version = "5.2.0", features = ["interpolate-folder-path"] }
