[package]
name = "{{project-name}}-client"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "WASM web client sources for {{project-name}}"
readme = "README.md"
categories = ["wasm", "web-programming", "web-programming::websocket"]
keywords = ["wasm"]
homepage = "https://{{project-name}}.com"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
{{project-name}}-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0.26"
console_error_panic_hook = "0.1.6"
instant = "0.1.2"
js-sys = "0.3.33"
maud = "0.21.0"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.56", features = ["nightly"] }
wasm-bindgen-futures = "0.4.6"
web-sys = { version = "0.3.33", features = [
  "BinaryType",
  "Blob",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "FileReader",
  "FileReaderSync",
  "HtmlBodyElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "Node",
  "NodeList",
  "Storage",
  "WebSocket",
  "Window"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.6"
