[package]
name = "{{project-name}}-controllers"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "HTTP controllers for the {{project-name}} server"
readme = "README.md"
categories = ["development-tools", "web-programming", "web-programming::websocket"]
keywords = ["wasm"]
homepage = "https://{{project-name}}.com"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"

[dependencies]
{{project-name}}-assets = { version = "0.0.1", path = "../assets" }
{{project-name}}-core = { version = "0.0.1", path = "../core" }
{{project-name}}-service = { version = "0.0.1", path = "../service" }
{{project-name}}-templates = { version = "0.0.1", path = "../templates" }

actix = "0.9.0"
actix-http = "1.0.1"
actix-service = "1.0.1"
actix-session = "0.3.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
anyhow = "1.0.26"
bytes = "0.5.3"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
futures = "0.3.1"
maud = "0.21.0"
mime = "0.3.14"
mime_guess = "2.0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
