[package]
name = "{{project-name}}-core"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "Core classes used by {{project-name}} in the app and WASM"
keywords = ["test", "noop", "pointless"]
homepage = "https://estimate.poker"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"
build = "build.rs"

[build-dependencies]
built = "0.3.2"

[dependencies]
anyhow = "1.0.25"
bincode = "1.2.1"
derive_more = "0.99.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
