[package]
name = "{{project-name}}-service"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "Application logic used by the {{project-name}} server"
readme = "README.md"
categories = ["development-tools"]
keywords = ["service"]
homepage = "https://{{project-name}}.com"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"

[dependencies]
{{project-name}}-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0.26"
chrono = "0.4.9"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
