[package]
name = "{{project-name}}-templates"
version = "0.0.1"
authors = ["{{authors}}"]
edition = "2018"
description = "HTML templates used by the {{project-name}} server"
readme = "README.md"
categories = ["development-tools"]
keywords = ["templates"]
homepage = "https://{{project-name}}.com"
repository = "https://github.com/{{project-name}}/{{project-name}}"
license = "MIT"

[dependencies]
{{project-name}}-core = { version = "0.0.1", path = "../core" }
{{project-name}}-service = { version = "0.0.1", path = "../service" }

anyhow = "1.0.25"
maud = "0.21.0"
num_cpus = "1.11.1"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
